--- a/views/main-ar/contact.ejs
+++ b/views/main-ar/contact.ejs
@@ -20,44 +20,20 @@
    <section class="contact-section section_padding">
       <div class="container">
          <div class="d-none d-sm-block mb-5 pb-4">
-            <div id="map" style="height: 480px;"></div>
-            <script>
-               function initMap() {
-                  var uluru = {
-                     lat: -25.363,
-                     lng: 131.044
-                  };
-                  var grayStyles = [{
-                     featureType: "all",
-                     stylers: [{
-                        saturation: -90
-                     },
-                     {
-                        lightness: 50
-                     }
-                     ]
-                  },
-                  {
-                     elementType: 'labels.text.fill',
-                     stylers: [{
-                        color: '#ccdee9'
-                     }]
-                  }
-                  ];
-                  var map = new google.maps.Map(document.getElementById('map'), {
-                     center: {
-                        lat: -31.197,
-                        lng: 150.744
-                     },
-                     zoom: 9,
-                     styles: grayStyles,
-                     scrollwheel: false
-                  });
-               }
-            </script>
-            <script
-               src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpfS1oRGreGSBU5HHjMmQ3o5NLw7VdJ6I&callback=initMap">
-               </script>
+            <section class="map_part">
+               <div class="container-fluid">
+                  <div class="row">
+                     <div class="col-lg-12">
+                        <div class="map_iner">
+                           <iframe
+                              src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d455.295185821188!2d32.9089203!3d24.08878!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14367b34f86452c7%3A0x42a3a5a9f672d514!2z2KfZhNmF2KfYs9ipINmD2YjZhtiz2YTYqiDZhNmE2KXYs9iq2LTYp9ix2KfYqiDZiNin2YTYo9i52YXYp9mEINin2YTZh9mG2K_Ys9mK2Kk!5e0!3m2!1sar!2seg!4v1677294652245!5m2!1sar!2seg"
+                              width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy"
+                              referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </section>
 
          </div>
 
@@ -109,8 +85,9 @@
                <div class="media contact-info">
                   <span class="contact-info__icon"><i class="ti-home"></i></span>
                   <div class="media-body">
-                     <h3>Buttonwood, California.</h3>
-                     <p>Rosemead, CA 91770</p>
+                     <h3>Aswan - Aswan, Takseem Aboshok Land, in front of Aswan Ambulance Facility</h3>
+                     <p>or </p>
+                     <h3>Qena - El Bostan Str. 2nd Floor</h3>
                   </div>
                </div>
                <div class="media contact-info">
