--- a/views/main-en/project.ejs
+++ b/views/main-en/project.ejs
@@ -30,7 +30,7 @@
                 <%projects.forEach(p=>{ %>
                     <div class="col-lg-3">
                         <div class="card" style="width: 100%">
-                            <img src="<%=p.img%>" class="card-img-top" alt="...">
+                            <img src="<%=p.imgs[0]%>" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">
                                     <%=p.name.en%>
