--- a/views/main-en/contact.ejs
+++ b/views/main-en/contact.ejs
@@ -27,7 +27,7 @@
                      <div class="col-lg-12">
                         <div class="map_iner">
                            <iframe
-                              src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d455.295185821188!2d32.9089203!3d24.08878!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14367b34f86452c7%3A0x42a3a5a9f672d514!2z2KfZhNmF2KfYs9ipINmD2YjZhtiz2YTYqiDZhNmE2KXYs9iq2LTYp9ix2KfYqiDZiNin2YTYo9i52YXYp9mEINin2YTZh9mG2K_Ys9mK2Kk!5e0!3m2!1sar!2seg!4v1677294652245!5m2!1sar!2seg"
+                              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3581.2764201904497!2d32.72235588550581!3d26.15512568345974!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x144eb7fb2a5f05bf%3A0x6c9a06666f87d06c!2z2KfZhNmF2KfYs9ipINmD2YjZhtiz2YTYqiDZhNmE2KfYs9iq2LTYp9ix2KfYqiDZiCDYp9mE2KfYudmF2KfZhCDYp9mE2YfZhtiv2LPZitip!5e0!3m2!1sar!2seg!4v1677299633328!5m2!1sar!2seg"
                               width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy"
                               referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
